--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="col-2">
               <p class="small_p">Send Me Your Feedback</p>
               <div class="form-container">
-                <form method="POST" action="https://formspree.io/kismaelkemal@gmail.com" id="contactForm">
+                <form method="POST" action="//formspree.io/kismaelkemal@gmail.com" id="contactForm">
                   <div class="contact-info">
                     <input class="form-name" type="text" name="name" placeholder="Name">
                     <input class="form-email" type="email" name="_replyto" placeholder="Email">
