--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
           </div>
         </div>
       </section>
+      <a href="https://www.webtalk.co/be/home/6863573"><img src="https://www.webtalk.co/app/assets/images/banner-wild-leaderboard.png" title="Banner" width="970" height="90" /></a>
     </div>
     <!-- google analytics code-->
     <script src="assets/js/analytics.js"></script>
