--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
           </div>
         </div>
       </section>
-      <a style="display:block; width: 100vw" href="https://www.webtalk.co/be/home/6863573"><img src="https://www.webtalk.co/app/assets/images/banner-wild-leaderboard.png" title="Banner" width="970" height="90" /></a>
+      <a style="display:block; width: 100vw" href="https://www.webtalk.co/be/home/6863573">
+        <img src="https://www.webtalk.co/app/assets/images/banner-wild-leaderboard.png" title="Banner" height="90" style="width: 100vw" />
+      </a>
     </div>
     <!-- google analytics code-->
     <script src="assets/js/analytics.js"></script>
