--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
           </div>
         </div>
       </section>
-      <a style="display:block; width: 100vw" href="https://www.webtalk.co/be/home/6863573">
-        <img src="https://www.webtalk.co/app/assets/images/banner-wild-leaderboard.png" title="Banner" height="90" style="width: 100vw" />
+      <a style="display:block;" href="https://www.webtalk.co/be/home/6863573">
+        <img src="https://www.webtalk.co/app/assets/images/banner-wild-leaderboard.png" title="Banner" style="width: 100vw; height: auto" />
       </a>
     </div>
     <!-- google analytics code-->
